Fix: issue with overlapping meal images

--- a/featured/featured.less
+++ b/featured/featured.less
@@ -75,7 +75,7 @@
           font-size: 40px;
           margin-bottom: 2rem;
           img {
-            width: 45%;
+            width: 40%;
             vertical-align: top;
             border: 2px solid rgb(94, 96, 225);
             border-radius: 50%;
